evilness, documentations